# WebVoteView

./: .gitignore  LICENSE  README.md  app.py  git-synchronize  pyproject.toml  requirements.txt  robots-prod.txt
.well-known/: security.txt
model/: articles.py  auth_blank.json  bioData.py  bio_data.py  config.py  date_helper.py  db.json  downloadVotes.py  downloadXLS.py  download_excel.py  download_votes.py  elastic.py  emailContact.py  email_contact.py  geoLookup.py  geo_lookup.py  logQuota.py  log_quota.py  loyalty.py  memberLookup.py~  nicknames.json  partyData.py  party_data.py  prepVotes.py  prep_votes.py  query_parser.py  raWIKI.py  search.py  searchAssemble.py  searchDispatcher.py  searchMembers.py  searchMeta.py  searchParties.py  searchVotes.py  search_assemble.py  search_members.py  search_meta.py  search_parties.py  search_results.py  search_votes.py  (+10 more)
setup/: DEPLOY_FULL_CODE  DEPLOY_HOURLY  DEPLOY_SITE_UPDATES  requirements.txt  root.crontab
static/: config.json  controljson  json  maintenance.html  partyjson  search_list.tpl
views/: about.tpl  about.tpl~  app.py  app.py~  articles.tpl  base.tpl  base.tpl~  carousel.tpl  congress.tpl  data.tpl  data_dropdowns.tpl  dc_rollcall.tpl  district.tpl  district.tpl.save  error.tpl  explore.tpl  header.tpl  header.tpl~  home.html  home.tpl  member_list.tpl  member_party_list.tpl  member_votes.tpl  old_rollcall.tpl  outdated.tpl  parties.tpl  partiesGlance.tpl  parties_glance.tpl  past_data.tpl  person.tpl  quota.tpl  raWIKI.tpl  research.tpl  scans.tpl  search.tpl  search.tpl~  search_list.tpl  search_results.tpl  (+4 more)
(+13755 files in other folders)
