[tool.poetry]
name = "webvoteview"
version = "0.1.0"
description = ""
authors = ["Aaron Rudkin <junk_signups@rudkin.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
stemming = "^1.0.1"
bottle = "^0.12.18"
fuzzywuzzy = "^0.18.0"
xlwt = "^1.3.0"
pymongo = "^3.10.1"
email_validator = "^1.1.1"
requests = "^2.24.0"
six = "^1.15.0"
Unidecode = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
