[tool.poetry]
name = "webvoteview"
version = "0.1.0"
description = ""
authors = ["Aaron Rudkin <junk_signups@rudkin.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
stemming = "^1.0.1"
bottle = "^0.12.21"
fuzzywuzzy = "^0.18.0"
xlwt = "^1.3.0"
pymongo = "^3.12.3"
email_validator = "^1.2.1"
requests = "^2.28.1"
six = "^1.16.0"
Unidecode = "^1.3.4"
numpy = "^1.23.1"
python-Levenshtein = "^0.12.2"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
